<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="intro_msg">Thank you for taking part in my project! \n \nTo continue to the application, please tap the button below to grant the app permission to detect your bluetooth status. \n \n <i><b>Please note:</b></i> \n \n - The app is <b>NOT</b> able to detect nearby devices: some features require bluetooth to be switched on or off to mock contact tracing functions \n \n - The app is <b>NOT</b> a real contact tracing app and will <b>NOT</b> track your contacts/position at any time \n \n - The app does <b>NOT</b> have access to an external database or the Internet: data you input will only be saved on your phone and can be deleted at any time.</string>
    <string name="covidTracker_app_name">CovidTracker</string>
    <string name="stopCovid_app_name">StopCovid</string>
    <string name="prototypes_introduction">Please choose one of the app views</string>
    <string name="cases_no">100000 \n cases in your area. \n Danger: red</string>
    <string name="placeholder_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Integer a vestibulum quam. Vestibulum ullamcorper lorem sed volutpat sollicitudin.
        Sed viverra, odio vitae consequat pulvinar, nisi tellus faucibus sapien, sed viverra sem erat a orci.
        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;
        Nullam eleifend posuere est sit amet ultricies.</string>
    <string name="covidTracker_intro">Protect yourself and your loved ones</string>
    <string name="welcome">Welcome!</string>
    <string name="continue_btn">Continue</string>
    <string name="stopCovid_btn">Start now</string>
    <string name="warning">WARNING</string>
    <string name="contactTracing_btn">Activate contact tracing</string>
    <string name="exit">X</string>
    <string name="bullets" tools:ignore="StringEscaping">\u00b7 Track your contacts and keep safe \n \u00b7 Stay updated with daily figures and data \n \u00b7 Track your symptoms and book tests</string>
    <string name="stopCovid_intro">Contact tracing is fundamental to stop the spread and end the pandemic. With StopCovid you can take responsibility of your safety and of the containment of Coronavirus. </string>
    <string name="warningUpload">- Information reported here must be truthful and up-to-date. Reporting false test results will cause fines. \n \n - Individuals you have been in contact with, however brief, must be notified for their safety \n \n - You must self-isolate for at least 10 days after a positive Covid test. Leaving home when positive to Coronavirus will cause fines.</string>
    <!-- Symptom tracker -->
    <string name="symptomTracker_intro">How are you feeling today?</string>
    <string name="symptomTracker_subtitle">Select all the symptoms you feel to keep track of your health.</string>
    <string name="symptomTracker_stopCovid_subtitle">Symptom Tracker is a tool to monitor your wellbeing and detect signs of Coronavirus prematurely. Use this every day for best results.</string>
    <!-- Store -->
    <string name="surgical"><b>Surgical mask</b>\n\nStandard disposable mask for day-to-day protection.\n\n<b>1 x £1</b></string>
    <string name="ffp2"><b>FFP2 Mask</b>\n\nThe best compromise between protection and comfort. Aerosol filtration not less than 94%.\n\n<b>1 x £10</b></string>
    <string name="ffp3"><b>FFP3 Mask/Respirator</b>\n\nAbsolute protection against any virus. Aerosol filtration percentage not less than 99%.\n\n <b>1 x £15</b></string>
    <string name="visor"><b>Face shield</b>\n\nWear it to be extra safe. Adjustable length up to 14\'.\n\n<b>1 x £15</b></string>
    <string name="gloves1"><b>Disposable gloves</b>\n\nStandard latex disposable gloves for everyday use.\n\n<b>1 x 0.50£</b></string>
    <string name="sanitiser"><b>Hand sanitiser</b>\n\nPocket hand sanitiser (30ml), 80% alcohol content.\n\n<b>1 x £3</b></string>
    <!-- Cart -->
    <string name="surgicalCart"><b>Surgical mask</b>\n\nStandard disposable mask for day-to-day protection.</string>
    <string name="ffp2Cart"><b>FFP2 Mask</b>\n\nThe best compromise between protection and comfort. Aerosol filtration not less than 94%.</string>
    <string name="ffp3Cart"><b>FFP3 Mask/Respirator</b>\n\nAbsolute protection against any virus. Aerosol filtration percentage not less than 99%.</string>
    <string name="visorCart"><b>Face shield</b>\n\nWear it to be extra safe. Adjustable length up to 14\'.</string>
    <string name="gloves1Cart"><b>Disposable gloves</b>\n\nStandard latex disposable gloves for everyday use.</string>
    <string name="sanitiserCart"><b>Hand sanitiser</b>\n\nPocket hand sanitiser (30ml), 80% alcohol content.</string>
</resources>