<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/box_shadow"
    tools:context=".CovidTracker.CovidTrackerStore">

    <TextView
        android:id="@+id/appTitle6"
        android:layout_width="416dp"
        android:layout_height="58dp"
        android:background="@color/colourAccentDark"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="CovidTracker"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationBar"
        android:layout_width="417dp"
        android:layout_height="55dp"
        android:background="@color/colourAccentDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/chatIcon"
            android:layout_width="43dp"
            android:layout_height="44dp"
            android:layout_gravity="center|end"
            android:layout_marginRight="15dp"
            android:onClick="openChat"
            app:srcCompat="@android:drawable/sym_action_chat" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="404dp"
        android:layout_height="559dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/navigationBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle6"
        app:layout_constraintVertical_bias="0.524">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/msgContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/emptyMsg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Your shopping cart is empty. Need a hand?"
                    android:textColor="@color/darkPinkHighlight"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tap the chat icon to talk to your virtual doctor." />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ffp2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/box_shadow"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="70dp"
                    android:layout_height="99dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_face_mask" />

                <TextView
                    android:id="@+id/ffp2Msg"
                    android:layout_width="228dp"
                    android:layout_height="128dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/ffp2Cart" />

                <ImageButton
                    android:id="@+id/ffp2Remove"
                    android:layout_width="56dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@drawable/box_no_shadow"
                    android:onClick="remove"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_remove_from_cart"
                    app:tint="@color/darkPinkHighlight" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/surgical"
                android:layout_width="match_parent"
                android:layout_height="134dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/box_shadow"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="68dp"
                    android:layout_height="106dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_surgical_mask" />

                <TextView
                    android:id="@+id/surgicalMsg"
                    android:layout_width="213dp"
                    android:layout_height="109dp"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="@string/surgicalCart" />

                <ImageButton
                    android:id="@+id/surgicalRemove"
                    android:layout_width="40dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="2dp"

                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@drawable/box_no_shadow"
                    android:onClick="remove"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_remove_from_cart"
                    app:tint="@color/darkPinkHighlight" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ffp3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/box_shadow"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="20dp"
                    android:layout_height="116dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_ffp3_mask" />

                <TextView
                    android:id="@+id/ffp3Msg"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="@string/ffp3Cart" />

                <ImageButton
                    android:id="@+id/ffp3Remove"
                    android:layout_width="1dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="2dp"

                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@drawable/box_no_shadow"
                    android:onClick="remove"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_remove_from_cart"
                    app:tint="@color/darkPinkHighlight" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/visor"
                android:layout_width="match_parent"
                android:layout_height="133dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/box_shadow"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="20dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_face_shield" />

                <TextView
                    android:id="@+id/visorMsg"
                    android:layout_width="174dp"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/visorCart" />

                <ImageButton
                    android:id="@+id/visorRemove"
                    android:layout_width="4dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="2dp"

                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@drawable/box_no_shadow"
                    android:onClick="remove"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_remove_from_cart"
                    app:tint="@color/darkPinkHighlight" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/gloves"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/box_shadow"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="86dp"
                    android:layout_height="98dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_gloves" />

                <TextView
                    android:id="@+id/glovesMsg"
                    android:layout_width="208dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="@string/gloves1Cart" />

                <ImageButton
                    android:id="@+id/glovesRemove"
                    android:layout_width="56dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="2dp"

                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@drawable/box_no_shadow"
                    android:onClick="remove"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_remove_from_cart"
                    app:tint="@color/darkPinkHighlight" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sanitiser"
                android:layout_width="match_parent"
                android:layout_height="146dp"
                android:layout_margin="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/box_shadow"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="85dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_hand_sanitizer" />

                <TextView
                    android:id="@+id/sanitiserMsg"
                    android:layout_width="209dp"
                    android:layout_height="132dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/sanitiserCart" />

                <ImageButton
                    android:id="@+id/sanitiserRemove"
                    android:layout_width="61dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="2dp"

                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@drawable/box_no_shadow"
                    android:onClick="remove"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_remove_from_cart"
                    app:tint="@color/darkPinkHighlight" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/shoppingCartTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="23dp"
        android:text="Your shopping cart"
        android:textColor="@color/darkPinkHighlight"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle6" />

    <LinearLayout
        android:layout_width="383dp"
        android:layout_height="88dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <Button
            android:id="@+id/checkoutBtn"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/box_shadow"
            android:backgroundTint="@color/btnColor"
            android:backgroundTintMode="multiply"
            android:onClick="buyItems"
            android:text="Checkout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/clearBasketBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/box_no_shadow"
            android:onClick="clearAll"
            android:text="Clear shopping cart"
            android:textAllCaps="false"
            android:textColor="@color/darkPinkHighlight"
            android:stateListAnimator="@null"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>